<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_label">智通云无障碍服务</string>
    <string name="activate_device_manager_cancel_tip">用户取消激活设备</string>
    <string name="activate_device_manager_tip">设备激活</string>
    <string name="activate_device_manager_wait_tip">正在激活设备，请耐心等待</string>
    <string name="activate_license_fail_tip">激活证书失败(%s)</string>
    <string name="activate_license_finish">激活证书成功</string>
    <string name="activate_license_wait_tip">开始激活证书</string>
    <string name="app_name">智通云</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear">清理</string>
    <string name="clear_data">清理数据</string>
    <string name="clear_data_tip">是否确认清理数据?</string>
    <string name="delete">删除</string>
    <string name="device_init">设备初始化</string>
    <string name="device_init_finish_tip">设备初始化完成</string>
    <string name="device_reset">设备重置</string>
    <string name="err_klm_code_unknown">未知错误(KLM: %1$s/%2$s)</string>
    <string name="err_klm_internal">内部异常(KLM)</string>
    <string name="err_klm_internal_server">内部服务异常(KLM)</string>
    <string name="err_klm_invalid_package_name">无效的应用包名(KLM)</string>
    <string name="err_klm_licence_invalid_license">无效的许可证书(KLM)</string>
    <string name="err_klm_licence_terminated">许可证书到期(KLM)</string>
    <string name="err_klm_network_disconnected">网络断开(许可证书)</string>
    <string name="err_klm_network_general">网络常规错误(KLM)</string>
    <string name="err_klm_not_current_date">设备时间不正确(KLM)</string>
    <string name="err_klm_null_params">参数为空(KLM)</string>
    <string name="err_klm_sig_mismatch">应用签名不匹配(KLM)</string>
    <string name="err_klm_unknown">未知错误(KLM)</string>
    <string name="err_klm_user_disagrees_license_agreement">用户不同意许可协议(KLM)</string>
    <string name="err_klm_ver_code_mismatch">应用版本不匹配(KLM)</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hms_apk_not_installed_hints">Some features in %1$s may not work properly without HMS Core, which is not installed on your device.</string>
    <string name="hms_bindfaildlg_message">%1$s is unable to use HMS Core. Launch Optimizer (Phone Manager) or go to Settings, enable all permissions for %2$s (including auto-launch and secondary launch), and try again.</string>
    <string name="hms_bindfaildlg_title">@string/hms_spoof_hints</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_is_spoof">It appears that you have an unofficial version of HMS Core (%1$s) installed on your device. Please uninstall HMS Core from Settings and return to this app to install the official version.</string>
    <string name="hms_spoof_hints">Note</string>
    <string name="i_know">我知道了</string>
    <string name="input_dynamic_pwd_tip">请输入动态码</string>
    <string name="klm_activated_succesfully">激活成功(KLM)</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="network_error_tip">网络异常，请检查网络</string>
    <string name="other">其他</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="reboot_tip">检测到您的平板存在安全隐患，平板将于&lt;font color=#186498&gt;5s&lt;/font&gt;后重启，或可手动立即重启。</string>
    <string name="request_runtime_permission_tip">初始化应用权限</string>
    <string name="retry_click_tip">请&lt;font color=#0B618C&gt;&lt;u&gt;点击重试&lt;/u&gt;&lt;/font&gt;</string>
    <string name="search_menu_title">Search</string>
    <string name="set_default_control_config">初始化管控配置</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_btn_cancel">取消</string>
    <string name="str_btn_ok">确定</string>
    <string name="str_tv_exit_title">提示</string>
    <string name="str_tv_exit_toast_content">您是否要退出?</string>
    <string name="sure">确定</string>
    <string name="tip_md5_error">文件校验失败, 请重新下载</string>
    <string name="title_device_info">设备信息</string>
    <string name="title_safe">安全模式</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="user_device_id">设备号</string>
    <string name="wifi_connection">网络连接</string>
    <string name="xhcore_apm">XHCoreAPM</string>
    <string name="zty_download_fail_tip">下载智通云失败(%s)</string>
    <string name="zty_download_install_tip">下载智通云安装包</string>
    <string name="zty_downloading_tip">正在下载智通云安装包，请耐心等待%1$1.1f%2$s</string>
    <string name="zty_initial_safe_check_exception">初始化应用权限失败</string>
    <string name="zty_initial_safe_check_failed">请勿继续卸载，否则平板将锁定</string>
    <string name="zty_initial_safe_check_prompt">开启智通云《允许追踪使用情况》权限，请在%d秒钟内完成操作</string>
    <string name="zty_initial_safe_check_prompt_write_settings">开启智通云《允许更改系统设置》权限，请在%d秒钟内完成操作</string>
    <string name="zty_initial_safe_check_timeout">开启智通云《允许追踪使用情况》权限，请在%d秒钟内完成操作</string>
    <string name="zty_initial_safe_check_timeout_write_settings">开启智通云《允许更改系统设置》权限，请在%d秒钟内完成操作</string>
    <string name="zty_install_fail_tip">智通云安装失败(%s)</string>
    <string name="zty_install_finish_tip">智通云安装完成</string>
    <string name="zty_installing_tip">开始安装智通云，请耐心等待</string>
    <string name="zty_setup_client">下载安装智通云</string>
    <string name="zty_start_fail_tip">启动智通云失败</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
</resources>
