<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/exit_dialog_bg"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_exit_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_exit_dialog_ico"
            android:background="@mipmap/exit_dialog_ico_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/color_exittext"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_exit_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/str_tv_exit_title"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_exit_dialog_line"
        android:background="@mipmap/exit_dialog_tips_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_exit_top"
        android:layout_centerInParent="true"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/color_exittext"
        android:gravity="fill_vertical|left"
        android:id="@+id/tv_exit_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_exit_toast_content"
        android:layout_below="@+id/iv_exit_dialog_line"
        android:layout_alignParentLeft="true"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tv_exit_dialog_content"
        android:layout_centerInParent="true">
        <Button
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:id="@+id/bt_exit_dialog_ok"
            android:background="@drawable/exit_dialog_ok_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/str_btn_ok"
            android:layout_weight="1"/>
        <Button
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:id="@+id/bt_exit_dialog_cancel"
            android:background="@drawable/exit_dialog_cancel_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/str_btn_cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
