<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_corner_white"
    android:layout_width="@dimen/dp_480"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:id="@+id/inputDialogTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/input_dynamic_pwd_tip"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/inputPointIv"
        android:visibility="gone"
        android:layout_width="@dimen/dp_8"
        android:layout_height="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:src="@drawable/point_red"
        android:layout_marginStart="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@+id/inputDialogTitleTv"
        app:layout_constraintStart_toEndOf="@+id/inputDialogTitleTv"
        app:layout_constraintTop_toTopOf="@+id/inputDialogTitleTv"/>
    <TextView
        android:textSize="@dimen/sp_22"
        android:textColor="@color/red"
        android:id="@+id/inputTipTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@+id/inputDialogTitleTv"
        app:layout_constraintStart_toEndOf="@+id/inputDialogTitleTv"
        app:layout_constraintTop_toTopOf="@+id/inputDialogTitleTv"/>
    <EditText
        android:textSize="@dimen/sp_24"
        android:textColor="#666666"
        android:id="@+id/inputDialogInputEt"
        android:background="@drawable/input_view_bg"
        android:padding="@dimen/dp_24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_40"
        android:inputType="textVisiblePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDialogTitleTv"/>
    <View
        android:id="@+id/inputDialogAView"
        android:layout_width="@dimen/dp_120"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/inputDialogInputEt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/inputDialogBView"
        android:layout_width="@dimen/dp_120"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/inputDialogInputEt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_72"
        android:layout_marginTop="@dimen/dp_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDialogInputEt">
        <View
            android:background="@color/split_line_light"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_split_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:id="@+id/inputDialogSplitLine"
            android:background="@color/split_line_light"
            android:layout_width="@dimen/main_split_line"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_gray_selector"
            android:gravity="center"
            android:id="@+id/inputDialogCancelBtn"
            android:background="@color/transparent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/inputDialogSureBtn"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_blue_green_selector"
            android:gravity="center"
            android:id="@+id/inputDialogSureBtn"
            android:background="@color/transparent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/inputDialogCancelBtn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
