<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:background="@drawable/init_guide_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_4"/>
    <ImageView
        android:id="@+id/initGuideTriangleIv"
        android:layout_width="@dimen/dp_8"
        android:layout_height="@dimen/dp_6"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_112"
        android:src="@mipmap/triangle_icon"
        android:layout_marginStart="@dimen/dp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/sp_40"
        android:textColor="@color/black_dark"
        android:gravity="center_vertical"
        android:id="@+id/initGuideTitleTv"
        android:background="@drawable/init_guide_title_bg"
        android:paddingLeft="@dimen/dp_72"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_126"
        android:text="@string/device_init"
        android:paddingStart="@dimen/dp_72"
        android:layout_marginEnd="@dimen/dp_126"
        app:layout_constraintLeft_toLeftOf="@+id/initGuideTriangleIv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initGuideTriangleIv"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/initGuideBannerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="initGuideTriangleIv, initGuideTitleTv, initGuideProgressBar"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/gray_light"
        android:gravity="center"
        android:id="@+id/initGuideVersionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_96"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/initGuideLandDivider"
        android:background="@color/black_dark"
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        app:layout_constraintBottom_toTopOf="@+id/initGuideVersionTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/gray"
        android:gravity="center"
        android:id="@+id/initGuideWifiTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/wifi_connection"
        android:includeFontPadding="false"
        android:drawablePadding="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@+id/initGuideLandDivider"
        app:layout_constraintEnd_toStartOf="@+id/initGuideLandDivider"
        app:layout_constraintTop_toTopOf="@+id/initGuideLandDivider"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/gray"
        android:gravity="center"
        android:id="@+id/initGuideOtherTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="@string/other"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@+id/initGuideLandDivider"
        app:layout_constraintStart_toEndOf="@+id/initGuideLandDivider"
        app:layout_constraintTop_toTopOf="@+id/initGuideLandDivider"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/initGuideWifiLayout"
        android:visibility="invisible"
        android:layout_width="@dimen/dp_88"
        android:layout_height="@dimen/dp_96"
        app:layout_constraintBottom_toTopOf="@+id/initGuideWifiTv"
        app:layout_constraintLeft_toLeftOf="@+id/initGuideWifiTv"
        app:layout_constraintRight_toRightOf="@+id/initGuideWifiTv">
        <View
            android:background="@mipmap/lianjie_step1_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:onClick="openWifi"/>
        <View
            android:background="@mipmap/lianjie_step2_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/_dp_1"
            android:onClick="authenticationNetwork"/>
    </LinearLayout>
    <com.xuehai.launcher.guide.StepProgressBar
        android:id="@+id/initGuideProgressBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initGuideTitleTv"/>
    <com.xuehai.launcher.widget.LoadingTextView
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black_dark"
        android:gravity="center"
        android:id="@+id/initGuideTipTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_200"
        android:layout_marginRight="@dimen/dp_80"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initGuideProgressBar"/>
    <TextView
        android:textSize="@dimen/sp_20"
        android:textColor="@color/black_dark"
        android:gravity="center"
        android:id="@+id/initGuideRetryTv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initGuideTipTv"/>
    <ImageView
        android:id="@+id/initGuideErrorIv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_empty_error"
        app:layout_constraintBottom_toTopOf="@+id/initGuideTipTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
